add delete code_sim
