# docs/swagger.json
@@ -60,6 +60,41 @@
                 }
             }
         },
+        "/api/v1/project/{projectName}/{tag}": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "project"
+                ],
+                "summary": "删除Project",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "projectName",
+                        "name": "projectName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tag",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ProjectDeleteResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/source_code/local": {
             "patch": {
                 "consumes": [
@@ -212,6 +247,9 @@
                     "type": "string"
                 }
             }
+        },
+        "model.ProjectDeleteResponse": {
+            "type": "object"
         },
         "model.SearchSourceCodeResponse": {
             "type": "object",
